Fix wrapping in list

--- a/src/presentation/notes/style.scss
+++ b/src/presentation/notes/style.scss
@@ -31,6 +31,7 @@ preso-notes {
   flex: 1;
   display: flex;
   flex-flow: column wrap;
+  height: 100%;
 
   &__item {
     display: block;
